# glslang

./: meson.build  meson_options.txt
OGLCompilersDLL/: meson.build
SPIRV/: meson.build
StandAlone/: meson.build
glslang/: meson.build
glslang/OSDependent/Unix/: meson.build
glslang/OSDependent/Windows/: meson.build
gtests/: meson.build
hlsl/: meson.build
