sources = [ 'hlslAttributes.cpp',
            'hlslParseHelper.cpp',
            'hlslScanContext.cpp',
            'hlslOpMap.cpp',
            'hlslTokenStream.cpp',
            'hlslGrammar.cpp',
            'hlslParseables.cpp']

headers = [ 'hlslAttributes.h',
            'hlslParseHelper.h',
            'hlslTokens.h',
            'hlslScanContext.h',
            'hlslOpMap.h',
            'hlslTokenStream.h',
            'hlslGrammar.h',
            'hlslParseables.h']

HLSL_lib = static_library('HLSL', sources, headers, install: true)
